# client-server

./: CMakeLists.txt  Makefile  README.md  admin.c  build.sh  client.c  license.key  license_guard.sv  license_manager.c  secure_bind.sv  server.c
